# ecomm-prod-assistant

./: .gitignore  Dockerfile  get_lib_versions.py  product_reviews.csv  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  infra.yml
data/: product_reviews.csv
notebook/: test.ipynb
product_assistant/config/: config.yaml
product_assistant/etl/: data_ingestion.py  data_scrapper.py
product_assistant/exception/: custom_exception.py
product_assistant/k8/: deployment.yaml
product_assistant/logger/: __init__.py
product_assistant/utils/: config_loader.py  model_loader.py
