[build-system]
requires = ["setuptools>=68"]          
build-backend = "setuptools.build_meta"

[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "Agentic AI based ecommerce product assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain==0.3.27",
    "python-dotenv==1.1.1",
    "streamlit==1.49.1",
]

# Optional: authors, license
authors = [{ name = "Neela Natarajan" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . )
[project.scripts]
ecomm-assistant = "ecomm_prod_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["prod_assistant"]
include = ["ecomm_prod_assistant*"]
